<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <include
        android:id="@+id/pageHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        layout="@layout/page_header" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/pageHeader"
        android:padding="3dip" >

        <LinearLayout
            android:id="@+id/layoutControls"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

	        <TableLayout
	            android:id="@+id/tableResults"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:layout_marginBottom="10dip"
	            android:stretchColumns="*"
	            android:visibility="gone" >
		            
	            <TableRow
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content" >
	                
	                <TextView
	                    style="@style/labelTextView"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:text="@string/label_premium_rate"
	                    android:textAppearance="?android:attr/textAppearanceSmall" />
	                	                
	                <TextView
	                    android:id="@+id/textPremiumRate"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="right"
	                    android:textColor="@color/highlight_color"
	                    android:textStyle="bold"
	                    android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

	            <TableRow
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content" >
	                
	                <TextView
	                    style="@style/labelTextView"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:text="@string/label_loan_amount"
	                    android:textAppearance="?android:attr/textAppearanceSmall" />
	                	                
	                <TextView
	                    android:id="@+id/textLoanAmount"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="right"
	                    android:textColor="@color/highlight_color"
	                    android:textStyle="bold"
	                    android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

	            <TableRow
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content" >
	                
	                <TextView
	                    style="@style/labelTextView"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:text="@string/label_premium_amount"
	                    android:textAppearance="?android:attr/textAppearanceSmall" />
	                	                
	                <TextView
	                    android:id="@+id/textPremiumAmount"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="right"
	                    android:textColor="@color/highlight_color"
	                    android:textStyle="bold"
	                    android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>
	            	            	            	            	            	
	            <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
	                <FrameLayout android:layout_width="fill_parent" android:layout_height="@dimen/control_divider_height"
	                    android:layout_margin="@dimen/control_divider_margin" android:layout_span="2" 
	                    android:background="@drawable/control_divider_bg"/>	                    
	            </TableRow>
	            	            
	        </TableLayout>
            
            <RelativeLayout
                android:id="@+id/layoutInsuranceType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                
                <TextView
                    android:id="@+id/textInsuranceType"
                    style="@style/labelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/label_insurance_type" />

                <Spinner
                    android:id="@+id/spinnerInsuranceType"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/textInsuranceType"
                    android:layout_centerVertical="true" />
                
            </RelativeLayout>
	        	        
	        
	        <TableLayout
	            android:id="@+id/tableLayoutLoan"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:stretchColumns="1" >

	            <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
	                <FrameLayout android:layout_width="fill_parent" android:layout_height="@dimen/control_divider_height"
	                    android:layout_margin="@dimen/control_divider_margin" android:layout_span="2" 
	                    android:background="@drawable/control_divider_bg"/>	                    
	            </TableRow>
	            	            
	            <TableRow
	                android:id="@+id/tableRow2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content" >
	                
	                <TextView
	                    style="@style/labelTextView"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_marginRight="5dip"
	                    android:text="@string/label_purchase_price" />

	                <EditText
	                    android:id="@+id/editPurchasePrice"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:imeOptions="actionNext"
	                    android:inputType="numberDecimal"
	                    android:minWidth="110dip" >
	                </EditText>	                
	            </TableRow>
	            
	            <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
	                <FrameLayout android:layout_width="fill_parent" android:layout_height="@dimen/control_divider_height"
	                    android:layout_margin="@dimen/control_divider_margin" android:layout_span="2" 
	                    android:background="@drawable/control_divider_bg"/>	                    
	            </TableRow>

	            <TableRow
	                android:id="@+id/tableRow23"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content" >
	                
	                <TextView
	                    style="@style/labelTextView"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center_vertical"
	                    android:text="@string/label_down_payment" />

	                <RelativeLayout 
	                    android:layout_width="fill_parent"
	                    android:gravity="center_vertical"
	                    android:layout_height="wrap_content">

		                <EditText
		                    android:id="@+id/editDownPayment"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:layout_alignParentLeft="true"
		                    android:layout_centerVertical="true"
		                    android:layout_toLeftOf="@+id/spinnerDollarOrPercent"
		                    android:imeOptions="actionNext"
		                    android:inputType="numberDecimal"
		                    android:minWidth="110dip" >
	
		                </EditText>
	
		                <Spinner
		                    android:id="@+id/spinnerDollarOrPercent"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:layout_alignParentRight="true"
		                    android:layout_centerVertical="true" />
	                    	                    
	                </RelativeLayout>
	                
	            </TableRow>
	            
	            <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
	                <FrameLayout android:layout_width="fill_parent" android:layout_height="@dimen/control_divider_height"
	                    android:layout_margin="@dimen/control_divider_margin" android:layout_span="2" 
	                    android:background="@drawable/control_divider_bg"/>	                    
	            </TableRow>
	            	            
	            <TableRow
	                android:id="@+id/tableRow4"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content" >
	                
	                <TextView
	                    style="@style/labelTextView"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/label_amortization" />

	                <Spinner
	                    android:id="@+id/spinnerAmortization"
	                    android:layout_span="2"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"/>
	                
	            </TableRow>
	            
	        </TableLayout>
	        
	        <Button
	            android:id="@+id/btnCalc"
	            android:layout_width="160dip"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:layout_marginTop="10dip"
	            android:text="@string/btn_calc" />	        	        	        
		</LinearLayout>
    </ScrollView>
</RelativeLayout>